		datatype in the SST window.
		Added code that should prevent the primary marker from 
		disappearing unexpectedly as well as dynamic resizing being
		stuck in the unset marker width.
3.3.75	02aug16	Fix crash when -S and -W are used in tandem.
3.3.76	13aug16	Fix for --disable-tcl in ./configure caused by 3.3.75 fix.
		Crash fix in fstapi.c on read value at time accessing of
		FST files that use new dynamic aliases, FastLZ, or LZ4.  This
		primarily affects rtlbrowse.
3.3.77	03oct16	Updated documentation to include an appendix on FST 
		implementation details.
		Removed '!A || (A && B)' is equivalent to '!A || B' redundant
		condition checks where found in source.
		Added hier_ignore_escapes rc variable.
		Dynamic resizing tweaks for when it is turned off.
		Added HUWL-? value types to signal_change_list() to keep GHW
		files from crashing Tcl scripts.
3.3.78	26oct16	Fixed crash when using multiple pattern searches.
3.3.79	31dec16	Disable accelerator keys in twinwave single window mode to
		avoid focus conflicts.
		Fixes for -fstrict-aliasing and other recent warnings.
		Added fill_waveform rc variable and corresponding menu option
		(/View/Show Filled High Values) to allow filling in the lower
		portion of high values for increased visibility.
3.3.80	17mar17	Added "/View/Mouseover Copies To Clipboard" menu option to
		allow copying values into the clipboard so they can be pasted
		into text editors, etc.
3.3.81	09jun17	Added max_fsdb_trees environment variable.
		Fixed -C option so it is persistent across new tabs.		
		Integrated updated GHW reader code.
3.3.82	02jul17	Get sys_fst working with VCS VPI.
		Added string concatenations for vectors.
		Added asserts to ghwlib.c to make scan-view clean.
3.3.83	04aug17	Preserve search type for regex search across reloads or
		close/reopens of regex search widget.
		Update local libz to current version.		
3.3.84	15aug17	Updated FSDB reader with experimental FST tree build
		routines for faster init.